# rules_rs

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yaml  publish.yaml  release_prep.sh
docs/: BUILD.bazel
e2e/smoke/: .bazelrc  BUILD  Cargo.toml  MODULE.bazel  README.md
experimental/toolchains/: BUILD.bazel  declare_toolchains.bzl  module_extension.bzl  toolchain_utils.bzl
patches/: rules_rust_triples.patch
rs/: BUILD.bazel  cargo_build_script.bzl  defs.bzl  extensions.bzl  rust_binary.bzl  rust_crate.bzl  rust_library.bzl  rust_proc_macro.bzl  rust_shared_library.bzl  rust_static_library.bzl  rust_test.bzl
rs/experimental/: BUILD.bazel  rules_rust.bzl
rs/experimental/toolchains/: BUILD.bazel  declare_rustc_toolchains.bzl  declare_rustfmt_toolchains.bzl  declare_toolchains.bzl  module_extension.bzl
rs/private/: BUILD.bazel  all_crate_deps.bzl  all_crate_deps_test.bzl  annotations.bzl  cargo_credentials.bzl  cargo_lints.bzl  cargo_repository.bzl  cfg_parser.bzl  cfg_parser_test.bzl  clippy_repository.bzl  crate_git_repository.bzl  crate_repository.bzl  default_annotation.bzl  downloader.bzl  git_repository.bzl  host_tools_repository.bzl  lint_flags.bzl  lint_flags_test.bzl  repository_utils.bzl  resolved_toolchain.bzl  resolver.bzl  rust_deps.bzl  rust_repository_utils.bzl  rustc_repository.bzl  rustfmt_repository.bzl  select_utils.bzl  semver.bzl  semver_test.bzl  stdlib_repository.bzl  toml2json.bzl  toolchains_repo.bzl  toolchains_repository.bzl
rs/tests/: versions_test.bzl
scripts/: rewrite_rules_rust_loads.sh
test/: .bazelrc  0001-allow-disabling-autoconfiguration.patch  3rd_party  BUILD.bazel  MODULE.bazel  REPO.bazel  aws-lc-sys-prebuilt.patch  dummy_test.sh  gemm-common-fp16.patch  khronos_api.patch  libffi-aarch64-trampoline.patch  libffi-aarch64.patch  nasm-include.patch  nasm-musl.patch  openssl-perl-genrule.patch  openssl-windows-udp-netreset.patch  rav1e-nasm-0.8.1.patch  ring-aarch64-windows-v6.patch  rules_rust_ar.patch  toolchains_llvm_bootstrapped.patch  toolchains_llvm_bootstrapped_dllcrt.patch  toolchains_llvm_bootstrapped_ws2.patch  verify_aliases.bzl  windows-version.patch
test/annotation_crate_features/: Cargo.toml
test/annotation_crate_features/src/: lib.rs
test/binaries/: Cargo.toml
test/bindgen/: Cargo.toml
test/build_dep_features/: Cargo.toml
test/build_script_aliases/: Cargo.toml
test/build_script_env_select/: Cargo.toml
test/build_script_runtime_env/: Cargo.toml
test/cfg_feature_target_dep/: Cargo.toml
test/cfg_feature_target_dep/inner/: Cargo.toml
test/cfg_feature_target_dep/inner/src/: lib.rs
test/cfg_feature_target_dep/src/: lib.rs
test/empty_workspace/: Cargo.toml
test/feature_name_overrides_implicit_dep/: Cargo.toml
test/first_party_feature_propagation/: Cargo.toml
test/first_party_feature_propagation.deps/dep_leaf/: Cargo.toml
test/first_party_feature_propagation/member_bar/: Cargo.toml
test/first_party_feature_propagation/member_foo/: Cargo.toml
test/first_party_feature_propagation/member_foo/src/: lib.rs
test/git_crates/: Cargo.toml
test/git_crates_aliased_deps/: Cargo.toml
test/many_workspace_deps/: Cargo.toml
test/multiple_versions_for_dependency/: Cargo.toml
test/multiple_versions_of_optional_dep/: Cargo.toml
test/non_optional_dep_feature/: Cargo.toml
test/optional_build_deps/: Cargo.toml
test/platform_dep_features/: Cargo.toml
test/target_workspace_dep_feature/: Cargo.toml
test/target_workspace_dep_feature/app/: Cargo.toml
test/target_workspace_dep_feature/app/src/: lib.rs
test/uv/: Cargo.toml
test/uv-fs/: Cargo.toml
test/vendored_crate_override/: BUILD.bazel  Cargo.toml
test/vendored_crate_override/app/: Cargo.toml
test/workspace_hyphen_dep_aliases/consumer/: BUILD.bazel  Cargo.toml
test/workspace_hyphen_dep_aliases/consumer/src/: lib.rs
test/workspace_hyphen_dep_aliases/dep-crate/: BUILD.bazel  Cargo.toml
test/workspace_hyphen_dep_aliases/dep-crate/src/: lib.rs
test/workspace_member_annotation_features.deps/dep_leaf/: Cargo.toml
test/workspace_member_annotation_features/member_bar/: Cargo.toml
test/workspace_member_annotation_features/member_bar/src/: lib.rs
test/workspace_member_annotation_features/member_foo/: Cargo.toml
test/workspace_path_dependency/: BUILD.bazel  Cargo.toml
test/workspace_path_dependency/app/: Cargo.toml
test/workspace_path_dependency/app/src/: main.rs
test/workspace_renamed_path_dep_aliases/: Cargo.toml
test/workspace_renamed_path_dep_aliases/consumer/: BUILD.bazel  Cargo.toml
test/workspace_renamed_path_dep_aliases/consumer/src/: lib.rs
test/workspace_renamed_path_dep_aliases/dep-crate/: BUILD.bazel
toml2json/: Cargo.toml  toml2json.wasm
toml2json/src/: main.rs
