load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//rs/private:cargo_credentials",
        "//rs/private:cfg_parser",
        "//rs/private:crate_git_repository",
        "//rs/private:crate_repository",
        "//rs/private:default_annotation",
        "//rs/private:downloader",
        "//rs/private:resolver",
        "//rs/private:semver",
        "//rs/private:toml2json",
    ],
)

# TODO(zbarsky): Stardoc won't work here
filegroup(
    name = "rust_crate",
    srcs = ["rust_crate.bzl"],
    visibility = ["//visibility:public"],
)
