load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//rs/private:annotations",
        "//rs/private:cargo_credentials",
        "//rs/private:cfg_parser",
        "//rs/private:crate_git_repository",
        "//rs/private:crate_repository",
        "//rs/private:downloader",
        "//rs/private:git_repository",
        "//rs/private:resolver",
        "//rs/private:semver",
        "//rs/private:toml2json",
        "@aspect_tools_telemetry_report//:defs.bzl",
        "@bazel_skylib//lib:paths",
    ],
)

# TODO(zbarsky): Stardoc won't work here
filegroup(
    name = "rust_crate",
    srcs = ["rust_crate.bzl"],
    visibility = ["//visibility:public"],
)
