bazel_dep(name = "rules_rs", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

local_path_override(
    module_name = "rules_rs",
    path = "../..",
)

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
)
use_repo(crate, "crates")
